--- a/src/code/_navbar.scss
+++ b/src/code/_navbar.scss
@@ -28,7 +28,23 @@
         background: transparent;
         border: none;
         outline: none!important;
+        width: 64px;
         height: 64px;
+        span {
+            height: 2px;
+            width: 22px;
+            left: calc(50% - 10px);
+        }
+        &:not(.is-active) {
+            span {
+                &:nth-child(1) {
+                    top: calc(50% - 8px);
+                }
+                &:nth-child(3) {
+                    top: calc(50% + 6px);
+                }
+            }
+        }
     }
     &-menu {
         &.is-active {
